--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -38,6 +38,9 @@
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\..\..\..\..\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Linq.dll</HintPath>
+        </Reference>
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
@@ -55,8 +58,12 @@
         <Compile Include="Network\Enums\LoginErrorCode.cs" />
         <Compile Include="Network\Enums\Opcodes.cs" />
         <Compile Include="Network\Gateway.cs" />
+        <Compile Include="Network\Server.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Service\Login\LoginService.cs" />
+        <Compile Include="Service\PacketHandlerAttribute.cs" />
+        <Compile Include="Service\Service.cs" />
         <Compile Include="Util\NetworkUtils.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
