--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -32,31 +33,56 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="Microsoft.CSharp" />
+        <Reference Include="mscorlib" />
         <Reference Include="SilkroadSecurityApi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\..\Desktop\yy\bin\Debug\SilkroadSecurityApi.dll</HintPath>
         </Reference>
         <Reference Include="System" />
+        <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="System.Data.SQLite, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139">
+          <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\lib\net46\System.Data.SQLite.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Data.SQLite.EF6, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139">
+          <HintPath>..\packages\System.Data.SQLite.EF6.1.0.114.0\lib\net46\System.Data.SQLite.EF6.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Data.SQLite.Linq, Version=1.0.114.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139">
+          <HintPath>..\packages\System.Data.SQLite.Linq.1.0.114.0\lib\net46\System.Data.SQLite.Linq.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Deployment" />
         <Reference Include="System.Drawing" />
         <Reference Include="System.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
           <HintPath>..\..\..\..\..\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Linq.dll</HintPath>
         </Reference>
         <Reference Include="System.Net.Http" />
+        <Reference Include="System.Numerics" />
         <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml" />
         <Reference Include="System.Xml.Linq" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Credentials.cs" />
+        <Compile Include="Database\GameDatabase.cs" />
         <Compile Include="Model\Configuration.cs" />
         <Compile Include="Model\Game\Character.cs" />
         <Compile Include="Model\Game\CharSelect.cs" />
         <Compile Include="Model\Game\ChatChannel.cs" />
         <Compile Include="Model\Game\ChatMessage.cs" />
+        <Compile Include="Model\Game\Coordinates.cs" />
         <Compile Include="Model\Server\ServerCapacity.cs" />
         <Compile Include="Model\Server\SilkroadServer.cs" />
         <Compile Include="Network\Agent.cs" />
@@ -69,6 +95,7 @@
         <Compile Include="Network\Server.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Service\Game\ChatService.cs" />
         <Compile Include="Service\Login\LoginService.cs" />
         <Compile Include="Service\PacketHandlerAttribute.cs" />
         <Compile Include="Service\Service.cs" />
@@ -84,6 +111,12 @@
         <Compile Include="Ui\Gui.Designer.cs">
           <DependentUpon>Gui.cs</DependentUpon>
         </Compile>
+        <Compile Include="Ui\PasscodeEnter.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Ui\PasscodeEnter.Designer.cs">
+          <DependentUpon>PasscodeEnter.cs</DependentUpon>
+        </Compile>
         <Compile Include="Ui\Serverlist.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -91,9 +124,14 @@
           <DependentUpon>Serverlist.cs</DependentUpon>
         </Compile>
         <Compile Include="Util\NetworkUtils.cs" />
+        <Compile Include="Util\Pk2Reader\Pk2Extractor.cs" />
+        <Compile Include="Util\Pk2Reader\Pk2File.cs" />
+        <Compile Include="Util\Pk2Reader\Pk2Folder.cs" />
+        <Compile Include="Util\Pk2Reader\Pk2Reader.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
+      <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Include="Ui\CharacterSelect.resx">
@@ -102,11 +140,24 @@
       <EmbeddedResource Include="Ui\Gui.resx">
         <DependentUpon>Gui.cs</DependentUpon>
       </EmbeddedResource>
+      <EmbeddedResource Include="Ui\PasscodeEnter.resx">
+        <DependentUpon>PasscodeEnter.cs</DependentUpon>
+      </EmbeddedResource>
       <EmbeddedResource Include="Ui\Serverlist.resx">
         <DependentUpon>Serverlist.cs</DependentUpon>
       </EmbeddedResource>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+      <PropertyGroup>
+        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+      </PropertyGroup>
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+      <Error Condition="!Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets'))" />
+    </Target>
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
+    <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.114.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
