Change directory structure

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -77,19 +77,19 @@
     <ItemGroup>
         <Compile Include="Credentials.cs" />
         <Compile Include="Database\GameDatabase.cs" />
-        <Compile Include="Enums\AuthErrorCode.cs" />
-        <Compile Include="Enums\ChatChannel.cs" />
-        <Compile Include="Enums\Locale.cs" />
-        <Compile Include="Enums\LoginBlockType.cs" />
-        <Compile Include="Enums\LoginErrorCode.cs" />
-        <Compile Include="Enums\Opcodes.cs" />
-        <Compile Include="Enums\ServerCapacity.cs" />
-        <Compile Include="Enums\SilkroadServer.cs" />
-        <Compile Include="Model\Character.cs" />
-        <Compile Include="Model\CharSelect.cs" />
-        <Compile Include="Model\ChatMessage.cs" />
-        <Compile Include="Model\Coordinates.cs" />
-        <Compile Include="Model\GameServer.cs" />
+        <Compile Include="Enums\Chat\ChatChannel.cs" />
+        <Compile Include="Enums\Common\Locale.cs" />
+        <Compile Include="Enums\Common\Opcodes.cs" />
+        <Compile Include="Enums\Login\AuthErrorCode.cs" />
+        <Compile Include="Enums\Login\LoginBlockType.cs" />
+        <Compile Include="Enums\Login\LoginErrorCode.cs" />
+        <Compile Include="Enums\Server\ServerCapacity.cs" />
+        <Compile Include="Enums\Server\SilkroadServer.cs" />
+        <Compile Include="Model\Character\Character.cs" />
+        <Compile Include="Model\Character\CharacterSelect.cs" />
+        <Compile Include="Model\Chat\ChatMessage.cs" />
+        <Compile Include="Model\Coord\Coordinates.cs" />
+        <Compile Include="Model\Server\GameServer.cs" />
         <Compile Include="Network\Agent.cs" />
         <Compile Include="Network\Gateway.cs" />
         <Compile Include="Network\Server.cs" />
