Improve directory structure, add item + event data

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -80,15 +80,24 @@
         <Compile Include="Enums\Chat\ChatChannel.cs" />
         <Compile Include="Enums\Common\Locale.cs" />
         <Compile Include="Enums\Common\Opcodes.cs" />
-        <Compile Include="Enums\Login\AuthErrorCode.cs" />
-        <Compile Include="Enums\Login\LoginBlockType.cs" />
-        <Compile Include="Enums\Login\LoginErrorCode.cs" />
+        <Compile Include="Enums\Event\InventoryAction.cs" />
+        <Compile Include="Enums\Item\ItemCategory.cs" />
+        <Compile Include="Enums\Item\ItemParser.cs" />
+        <Compile Include="Enums\Item\Type\Consumable.cs" />
+        <Compile Include="Enums\Item\Type\COS.cs" />
+        <Compile Include="Enums\Item\Type\Equipment.cs" />
+        <Compile Include="Enums\Item\Type\FellowEquipment.cs" />
+        <Compile Include="Enums\Item\Type\JobEquipment.cs" />
+        <Compile Include="Enums\Login\Error\AuthErrorCode.cs" />
+        <Compile Include="Enums\Login\Error\LoginBlockType.cs" />
+        <Compile Include="Enums\Login\Error\LoginErrorCode.cs" />
         <Compile Include="Enums\Server\ServerCapacity.cs" />
         <Compile Include="Enums\Server\SilkroadServer.cs" />
         <Compile Include="Model\Character\Character.cs" />
         <Compile Include="Model\Character\CharacterSelect.cs" />
         <Compile Include="Model\Chat\ChatMessage.cs" />
         <Compile Include="Model\Coord\Coordinates.cs" />
+        <Compile Include="Model\Inventory\Item.cs" />
         <Compile Include="Model\Server\GameServer.cs" />
         <Compile Include="Network\Agent.cs" />
         <Compile Include="Network\Gateway.cs" />
