Add entities, start spawn packet

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -83,25 +83,56 @@
     <Compile Include="Enums\Event\InventoryAction.cs" />
     <Compile Include="Enums\Item\ItemCategory.cs" />
     <Compile Include="Enums\Item\ItemParser.cs" />
-    <Compile Include="Enums\Item\Type\Consumable.cs" />
-    <Compile Include="Enums\Item\Type\COS.cs" />
-    <Compile Include="Enums\Item\Type\Equipment.cs" />
-    <Compile Include="Enums\Item\Type\FellowEquipment.cs" />
-    <Compile Include="Enums\Item\Type\JobEquipment.cs" />
+    <Compile Include="Enums\Item\Type\ConsumableData.cs" />
+    <Compile Include="Enums\Item\Type\CosData.cs" />
+    <Compile Include="Enums\Item\Type\EquipmentData.cs" />
+    <Compile Include="Enums\Item\Type\FellowEquipmentData.cs" />
+    <Compile Include="Enums\Item\Type\JobEquipmentData.cs" />
     <Compile Include="Enums\Login\Error\AuthErrorCode.cs" />
     <Compile Include="Enums\Login\Error\LoginBlockType.cs" />
     <Compile Include="Enums\Login\Error\LoginErrorCode.cs" />
     <Compile Include="Enums\Quest\QuestType.cs" />
     <Compile Include="Enums\Server\ServerCapacity.cs" />
     <Compile Include="Enums\Server\SilkroadServer.cs" />
-    <Compile Include="Enums\Skill\BuffInfo.cs" />
+    <Compile Include="Enums\Skill\BuffData.cs" />
     <Compile Include="Model\Character\LocalPlayer.cs" />
     <Compile Include="Model\Character\Character.cs" />
     <Compile Include="Model\Chat\ChatMessage.cs" />
     <Compile Include="Model\Coord\ICoord.cs" />
     <Compile Include="Model\Coord\LocalPoint.cs" />
     <Compile Include="Model\Coord\WorldPoint.cs" />
-    <Compile Include="Model\Inventory\Item.cs" />
+    <Compile Include="Model\Entity\Cos.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressCommandPost.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressDefenseCamp.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressGate.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressHeart.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressObstacle.cs" />
+    <Compile Include="Model\Entity\Fortress\Structure\FortressTower.cs" />
+    <Compile Include="Model\Entity\GroundItem.cs" />
+    <Compile Include="Model\Entity\Pet\AttackPet.cs" />
+    <Compile Include="Model\Entity\Pet\FellowPet.cs" />
+    <Compile Include="Model\Entity\Pet\Flower.cs" />
+    <Compile Include="Model\Entity\Pet\GuildGuard.cs" />
+    <Compile Include="Model\Entity\Pet\Horse.cs" />
+    <Compile Include="Model\Entity\Pet\PickPet.cs" />
+    <Compile Include="Model\Entity\Pet\QuestPet.cs" />
+    <Compile Include="Model\Entity\Pet\ThiefCaravan.cs" />
+    <Compile Include="Model\Entity\Pet\Transport.cs" />
+    <Compile Include="Model\Entity\Entity.cs" />
+    <Compile Include="Model\Entity\FortressCos.cs" />
+    <Compile Include="Model\Entity\Fortress\FortressDefenseGuard.cs" />
+    <Compile Include="Model\Entity\Fortress\FortressFlag.cs" />
+    <Compile Include="Model\Entity\Fortress\FortressMonster.cs" />
+    <Compile Include="Model\Entity\Fortress\FortressPatrolGuard.cs" />
+    <Compile Include="Model\Entity\FortressStructure.cs" />
+    <Compile Include="Model\Entity\Guide.cs" />
+    <Compile Include="Model\Entity\Monster.cs" />
+    <Compile Include="Model\Entity\Npc.cs" />
+    <Compile Include="Model\Entity\PathingEntity.cs" />
+    <Compile Include="Model\Entity\Player.cs" />
+    <Compile Include="Model\Entity\SkillZone.cs" />
+    <Compile Include="Model\Entity\Teleport.cs" />
+    <Compile Include="Model\Inventory\InventoryItem.cs" />
     <Compile Include="Model\Server\GameServer.cs" />
     <Compile Include="Network\Agent.cs" />
     <Compile Include="Network\Gateway.cs" />
@@ -109,7 +140,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Game\Chat\ChatService.cs" />
-    <Compile Include="Service\Game\Common\CharacterService.cs" />
+    <Compile Include="Service\Game\Entity\CharacterService.cs" />
+    <Compile Include="Service\Game\Entity\SpawnService.cs" />
     <Compile Include="Service\Login\CharacterSelectService.cs" />
     <Compile Include="Service\Login\LoginService.cs" />
     <Compile Include="Service\PacketHandlerAttribute.cs" />
