--- a/SimpleCL/packages.config
+++ b/SimpleCL/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.114.4" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net472" />
