--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -101,12 +101,12 @@
     <Compile Include="Enums\Server\ServerCapacity.cs" />
     <Compile Include="Enums\Server\SilkroadServer.cs" />
     <Compile Include="Enums\Skills\BuffData.cs" />
-    <Compile Include="Interaction\Entities\Entities.cs" />
-    <Compile Include="Interaction\Entities\Monsters.cs" />
-    <Compile Include="Interaction\Entities\Npcs.cs" />
-    <Compile Include="Interaction\Entities\Pets.cs" />
-    <Compile Include="Interaction\Entities\Players.cs" />
-    <Compile Include="Interaction\Entities\Teleports.cs" />
+    <Compile Include="Interaction\Providers\Entities.cs" />
+    <Compile Include="Interaction\Providers\Monsters.cs" />
+    <Compile Include="Interaction\Providers\Npcs.cs" />
+    <Compile Include="Interaction\Providers\Pets.cs" />
+    <Compile Include="Interaction\Providers\Players.cs" />
+    <Compile Include="Interaction\Providers\Teleports.cs" />
     <Compile Include="Interaction\InteractionQueue.cs" />
     <Compile Include="Interaction\Pathing\Movement.cs" />
     <Compile Include="Models\Character\LocalPlayer.cs" />
