--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -158,6 +158,11 @@
     <Compile Include="Network\Agent.cs" />
     <Compile Include="Network\Gateway.cs" />
     <Compile Include="Network\Server.cs" />
+    <Compile Include="Services\Game\ChatService.cs" />
+    <Compile Include="Services\Game\LocalPlayerService.cs" />
+    <Compile Include="Services\Game\MovementService.cs" />
+    <Compile Include="Services\Game\SpawnService.cs" />
+    <Compile Include="Services\Game\StatusService.cs" />
     <Compile Include="SimpleCL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -165,11 +170,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Services\Game\Chatter\ChatService.cs" />
-    <Compile Include="Services\Game\Entities\LocalPlayerService.cs" />
-    <Compile Include="Services\Game\Entities\MovementService.cs" />
-    <Compile Include="Services\Game\Entities\SpawnService.cs" />
-    <Compile Include="Services\Game\Entities\StatusService.cs" />
     <Compile Include="Services\Login\CharacterSelectService.cs" />
     <Compile Include="Services\Login\LoginService.cs" />
     <Compile Include="Services\PacketHandlerAttribute.cs" />
