--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -161,9 +161,9 @@
     <Compile Include="Network\Server.cs" />
     <Compile Include="Services\Game\ChatService.cs" />
     <Compile Include="Services\Game\LocalPlayerService.cs" />
-    <Compile Include="Services\Game\MovementService.cs" />
-    <Compile Include="Services\Game\SpawnService.cs" />
-    <Compile Include="Services\Game\StatusService.cs" />
+    <Compile Include="Services\Game\EntityMovementService.cs" />
+    <Compile Include="Services\Game\EntitySpawnService.cs" />
+    <Compile Include="Services\Game\EntityHealthService.cs" />
     <Compile Include="SimpleCL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
