--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>SimpleCL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -175,7 +176,7 @@
     <Compile Include="SilkroadSecurityApi\Security.cs" />
     <Compile Include="SilkroadSecurityApi\TransferBuffer.cs" />
     <Compile Include="SilkroadSecurityApi\Ultility.cs" />
-    <Compile Include="SimpleCL.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -233,9 +234,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ui\CharacterSelection.resx">
       <DependentUpon>CharacterSelection.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Ui\Components\MapTile.resx">
-      <DependentUpon>MapTile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ui\Gui.resx">
       <DependentUpon>Gui.cs</DependentUpon>
