More cleanup and refactors

--- a/SimpleCL/SimpleCL.csproj
+++ b/SimpleCL/SimpleCL.csproj
@@ -169,13 +169,13 @@
     <Compile Include="Services\Game\EntityMovementService.cs" />
     <Compile Include="Services\Game\EntitySpawnService.cs" />
     <Compile Include="Services\Game\EntityHealthService.cs" />
-    <Compile Include="SilkroadSecurityApi\Blowfish.cs" />
-    <Compile Include="SilkroadSecurityApi\Packet.cs" />
-    <Compile Include="SilkroadSecurityApi\PacketReader.cs" />
-    <Compile Include="SilkroadSecurityApi\PacketWriter.cs" />
-    <Compile Include="SilkroadSecurityApi\Security.cs" />
-    <Compile Include="SilkroadSecurityApi\TransferBuffer.cs" />
-    <Compile Include="SilkroadSecurityApi\Ultility.cs" />
+    <Compile Include="SecurityApi\Blowfish.cs" />
+    <Compile Include="SecurityApi\Packet.cs" />
+    <Compile Include="SecurityApi\PacketReader.cs" />
+    <Compile Include="SecurityApi\PacketWriter.cs" />
+    <Compile Include="SecurityApi\Security.cs" />
+    <Compile Include="SecurityApi\TransferBuffer.cs" />
+    <Compile Include="SecurityApi\Ultility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
